--- a/amazonaa/frontend/src/index.css
+++ b/amazonaa/frontend/src/index.css
@@ -6,22 +6,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.site-container{
+  min-height: 100vh;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-header {
-  background-color: #404040;
-  padding: 1rem;
-}
-header a {
-  color: #ffffff;
-  font-weight: bold;
-  text-decoration: none;
-}
+
 main{
-  padding:1rem
+  flex:1;
 }
 
 .products {
@@ -36,7 +31,7 @@ main{
 }
 .product img {
   width: 100%;
-  max-width: 300px;
+  max-width: 400px;
 }
 .productInfo{
   padding:1rem;
